Feat:Api Updated Shipment Updated Design Changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 six
 Faker
-pillow~=10.3.0
+pillow
 markdown
 python-dateutil
-pdf2image~=1.17.0
-stripe~=9.6.0
-django~=5.0.6
+pdf2image
+stripe
+django
 django-environ
 django-filter
-django-allauth==0.55.0
+django-allauth
 django-resized
 python-decouple
 django-ckeditor
@@ -23,5 +23,5 @@ django-jazzmin
 dj-rest-auth
 drf-yasg
 django-phonenumber-field
-razorpay~=1.4.2
-requests~=2.31.0
+razorpay
+requests
